Added a menu for normals listing all normals and setup to be ready to launch next activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CharacterActivity"
+            android:name=".ShowNormalsActivity"
             android:label="@string/title_activity_character" >
         </activity>
     </application>
