Added utility class to pull frame hitbox data and sprite image.
To demo, displaying the active image for all normals and dumping the hb data in a text view.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,5 +65,5 @@
             android:label="@string/title_activity_character" >
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
