Fixed chun li not pulling data from web correctly. Refactored code for the hitbox data provider, checks internet access first, also checks for a preference in case network data is a concern (no way to set this yet though).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:name=".moves.gjspecials.ShowGeneiJinSpecialsDetailActivity"
             android:label="@string/title_activity_character" >
         </activity>
+        <activity
+            android:name=".preference.UserSettingActivity"
+            android:label="@string/preference_attributes" >
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
